# runo

./: .commala.yml  .gitignore  .release-please-manifest.json  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  commala-junit.xml
.cargo/: audit.toml  release.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  benchmark.yml  build.yml  lint.yml  nightly.yml  post-release.yml  release.yml  scorecard.yml  test.yml
benches/: main.rs
examples/: simple-secret-password.yml  simple-secret-username-cron.yml  simple-secret-username.yml
rbac/: kustomization.yaml  role-binding.yaml  role.yaml  service-account.yaml
scripts/: create-release.sh  update-changelog.sh
src/: annotations.rs  config.rs  cron.rs  errors.rs  http.rs  k8s.rs  kube.rs  labels.rs  logging.rs  main.rs  reconciler.rs  secrets.rs
tests/: test_main.rs
