[package]
name = "runo"
description = "rūnō - A Secrets Generator for Kubernetes written in Rust"
authors = ["Aljoscha Pörtner <aljoscha.poertner@proton.me>"]
version = "0.2.19"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
futures = "0.3.31"
futures-util = "0.3.28"
thiserror = "2.0.16"
rand = "0.9.2"
regex = "1.11.2"
rand_regex = "0.18.1"
cron = "0.15.0"
chrono = "0.4.41"
serde = "1.0.219"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
sha3 = "0.10.8"
actix-web = "4.11.0"
anyhow = "1.0.98"
clap = { version = "4.5.47", features = ["derive"] }
time = "0.3.41"
sha2 = "0.10.9"

[dev-dependencies]
assert_cmd = "2.0.17"
criterion = { version = "0.7.0", features = ["html_reports"] }
rstest = "0.25.0"
temp-env = "0.3.6"

[[bench]]
name = "main"
harness = false

[[bin]]
name = "runo"
path = "src/main.rs"
bench = false
